--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,68 +24,62 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev,test]"
-        
-    - name: Lint and fix with ruff
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Install Playwright browsers
       run: |
-        git config --global user.name "GitHub Actions Bot"
-        git config --global user.email "actions@github.com"
-        ruff check --fix --unsafe-fixes .
-        git add .
-        if ! git diff --staged --quiet; then
-          git pull --rebase origin main
-          git commit -m "style: apply automatic fixes"
-          git push https://$GITHUB_TOKEN@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
-        fi
-        
-    - name: Format with black
+        playwright install chromium
+        playwright install-deps chromium
+
+    - name: Lint with ruff
       run: |
-        black .
-        git add .
-        git diff --staged --quiet || (git commit -m "style: apply black formatting" && git push https://$GITHUB_TOKEN@github.com/${{ github.repository }}.git HEAD:${{ github.ref }})
-        
+        ruff check apias/ tests/
+
+    - name: Format check with ruff
+      run: |
+        ruff format --check apias/ tests/
+
     - name: Type check with mypy
       run: |
-        mypy apias
-        
+        mypy apias/ --ignore-missing-imports
+
     - name: Test with pytest
       run: |
         pytest --cov=apias --cov-report=xml
-        
+
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
-        fail_ci_if_error: true
+        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.9"
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build twine
-        
+
     - name: Build package
       run: python -m build
-      
+
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: __token__
