--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "types-beautifulsoup4>=4.12.0",
     "openai[aiohttp]>=2.8.1",
     "rich>=14.2.0",
+    "defusedxml>=0.7.1",
 ]
 
 [project.optional-dependencies]
